@@ -5,12 +5,13 @@ import fr.frinn.custommachinery.api.component.MachineComponentType;
 import fr.frinn.custommachinery.api.crafting.CraftingResult;
 import fr.frinn.custommachinery.api.crafting.ICraftingContext;
 import fr.frinn.custommachinery.api.crafting.IMachineRecipe;
+import fr.frinn.custommachinery.api.crafting.IRequirementList;
 import fr.frinn.custommachinery.api.integration.jei.IJEIIngredientRequirement;
 import fr.frinn.custommachinery.api.integration.jei.IJEIIngredientWrapper;
-import fr.frinn.custommachinery.api.requirement.ITickableRequirement;
+import fr.frinn.custommachinery.api.requirement.IRequirement;
+import fr.frinn.custommachinery.api.requirement.RecipeRequirement;
 import fr.frinn.custommachinery.api.requirement.RequirementIOMode;
 import fr.frinn.custommachinery.api.requirement.RequirementType;
-import fr.frinn.custommachinery.impl.requirement.AbstractChanceableRequirement;
 import fr.frinn.custommachinerymekanism.Registration;
 import fr.frinn.custommachinerymekanism.client.jei.heat.Heat;
 import fr.frinn.custommachinerymekanism.client.jei.wrapper.HeatIngredientWrapper;
@@ -21,24 +22,20 @@ import net.minecraft.network.chat.Component;
 import java.util.Collections;
 import java.util.List;
 
-public class HeatPerTickRequirement extends AbstractChanceableRequirement<HeatMachineComponent> implements ITickableRequirement<HeatMachineComponent>, IJEIIngredientRequirement<Heat> {
+public class HeatPerTickRequirement implements IRequirement<HeatMachineComponent>, IJEIIngredientRequirement<Heat> {
 
     public static final NamedCodec<HeatPerTickRequirement> CODEC = NamedCodec.record(heatRequirementInstance ->
             heatRequirementInstance.group(
                     RequirementIOMode.CODEC.fieldOf("mode").forGetter(HeatPerTickRequirement::getMode),
-                    NamedCodec.doubleRange(0.0D, Double.MAX_VALUE).fieldOf("amount").forGetter(requirement -> requirement.amount),
-                    NamedCodec.doubleRange(0.0D, 1.0D).optionalFieldOf("chance", 1.0D).forGetter(HeatPerTickRequirement::getChance)
-            ).apply(heatRequirementInstance, (mode, amount, chance) -> {
-                HeatPerTickRequirement requirement = new HeatPerTickRequirement(mode, amount);
-                requirement.setChance(chance);
-                return requirement;
-            }), "Heat per tick requirement"
+                    NamedCodec.doubleRange(0.0D, Double.MAX_VALUE).fieldOf("amount").forGetter(requirement -> requirement.amount)
+            ).apply(heatRequirementInstance, HeatPerTickRequirement::new), "Heat per tick requirement"
     );
 
+    private final RequirementIOMode mode;
     private final double amount;
 
     public HeatPerTickRequirement(RequirementIOMode mode, double amount) {
-        super(mode);
+        this.mode = mode;
         this.amount = amount;
     }
 
@@ -53,6 +50,11 @@ public class HeatPerTickRequirement extends AbstractChanceableRequirement<HeatMa
     }
 
     @Override
+    public RequirementIOMode getMode() {
+        return this.mode;
+    }
+
+    @Override
     public boolean test(HeatMachineComponent component, ICraftingContext context) {
         double amount = context.getModifiedValue(this.amount, this, null);
         if(getMode() == RequirementIOMode.INPUT)
@@ -61,32 +63,26 @@ public class HeatPerTickRequirement extends AbstractChanceableRequirement<HeatMa
     }
 
     @Override
-    public CraftingResult processStart(HeatMachineComponent component, ICraftingContext context) {
-        return CraftingResult.pass();
+    public void gatherRequirements(IRequirementList<HeatMachineComponent> list) {
+        list.processEachTick(this::processTick);
     }
 
-    @Override
-    public CraftingResult processEnd(HeatMachineComponent component, ICraftingContext context) {
-        return CraftingResult.pass();
-    }
-
-    @Override
-    public CraftingResult processTick(HeatMachineComponent component, ICraftingContext context) {
+    private CraftingResult processTick(HeatMachineComponent component, ICraftingContext context) {
         double amount = context.getModifiedValue(this.amount, this, null);
-        IHeatCapacitor capacitor = component.getHeatCapacitors(null).get(0);
+        IHeatCapacitor capacitor = component.getHeatCapacitors(null).getFirst();
         if(getMode() == RequirementIOMode.INPUT) {
             if(capacitor.getHeat() < amount)
                 return CraftingResult.error(Component.translatable("custommachinerymekanism.requirements.heat.error.input", amount, capacitor.getHeat()));
             capacitor.handleHeat(-amount);
         }
         else
-            component.getHeatCapacitors(null).get(0).handleHeat(amount);
+            component.getHeatCapacitors(null).getFirst().handleHeat(amount);
 
         return CraftingResult.success();
     }
 
     @Override
-    public List<IJEIIngredientWrapper<Heat>> getJEIIngredientWrappers(IMachineRecipe recipe) {
-        return Collections.singletonList(new HeatIngredientWrapper(getMode(), this.amount, getChance(), true));
+    public List<IJEIIngredientWrapper<Heat>> getJEIIngredientWrappers(IMachineRecipe recipe, RecipeRequirement<?, ?> requirement) {
+        return Collections.singletonList(new HeatIngredientWrapper(getMode(), this.amount, requirement.chance(), true));
     }
 }
