@@ -5,11 +5,13 @@ import fr.frinn.custommachinery.api.component.MachineComponentType;
 import fr.frinn.custommachinery.api.crafting.CraftingResult;
 import fr.frinn.custommachinery.api.crafting.ICraftingContext;
 import fr.frinn.custommachinery.api.crafting.IMachineRecipe;
+import fr.frinn.custommachinery.api.crafting.IRequirementList;
 import fr.frinn.custommachinery.api.integration.jei.IJEIIngredientRequirement;
 import fr.frinn.custommachinery.api.integration.jei.IJEIIngredientWrapper;
+import fr.frinn.custommachinery.api.requirement.IRequirement;
+import fr.frinn.custommachinery.api.requirement.RecipeRequirement;
 import fr.frinn.custommachinery.api.requirement.RequirementIOMode;
 import fr.frinn.custommachinery.api.requirement.RequirementType;
-import fr.frinn.custommachinery.impl.requirement.AbstractDelayedChanceableRequirement;
 import fr.frinn.custommachinerymekanism.Registration;
 import fr.frinn.custommachinerymekanism.client.jei.heat.Heat;
 import fr.frinn.custommachinerymekanism.client.jei.wrapper.HeatIngredientWrapper;
@@ -20,26 +22,20 @@ import net.minecraft.network.chat.Component;
 import java.util.Collections;
 import java.util.List;
 
-public class HeatRequirement extends AbstractDelayedChanceableRequirement<HeatMachineComponent> implements IJEIIngredientRequirement<Heat> {
+public class HeatRequirement implements IRequirement<HeatMachineComponent>, IJEIIngredientRequirement<Heat> {
 
     public static final NamedCodec<HeatRequirement> CODEC = NamedCodec.record(heatRequirementInstance ->
             heatRequirementInstance.group(
-                    RequirementIOMode.CODEC.fieldOf("mode").forGetter(HeatRequirement::getMode),
-                    NamedCodec.doubleRange(0.0D, Double.MAX_VALUE).fieldOf("amount").forGetter(requirement -> requirement.amount),
-                    NamedCodec.doubleRange(0.0D, 1.0D).optionalFieldOf("chance", 1.0D).forGetter(HeatRequirement::getChance),
-                    NamedCodec.doubleRange(0.0D, 1.0D).optionalFieldOf("delay", 0.0D).forGetter(HeatRequirement::getDelay)
-            ).apply(heatRequirementInstance, (mode, amount, chance, delay) -> {
-                    HeatRequirement requirement = new HeatRequirement(mode, amount);
-                    requirement.setChance(chance);
-                    requirement.setDelay(delay);
-                    return requirement;
-            }), "Heat requirement"
+                    RequirementIOMode.CODEC.fieldOf("mode").forGetter(requirement -> requirement.mode),
+                    NamedCodec.doubleRange(0.0D, Double.MAX_VALUE).fieldOf("amount").forGetter(requirement -> requirement.amount)
+            ).apply(heatRequirementInstance, HeatRequirement::new), "Heat requirement"
     );
 
+    private final RequirementIOMode mode;
     private final double amount;
 
     public HeatRequirement(RequirementIOMode mode, double amount) {
-        super(mode);
+        this.mode = mode;
         this.amount = amount;
     }
 
@@ -54,18 +50,27 @@ public class HeatRequirement extends AbstractDelayedChanceableRequirement<HeatMa
     }
 
     @Override
+    public RequirementIOMode getMode() {
+        return this.mode;
+    }
+
+    @Override
     public boolean test(HeatMachineComponent component, ICraftingContext context) {
         double amount = context.getModifiedValue(this.amount, this, null);
         if(getMode() == RequirementIOMode.INPUT)
-            return component.getHeatCapacitors(null).get(0).getHeat() >= amount;
+            return component.getHeatCapacitors(null).getFirst().getHeat() >= amount;
         return true;
     }
 
     @Override
-    public CraftingResult processStart(HeatMachineComponent component, ICraftingContext context) {
-        if(getMode() != RequirementIOMode.INPUT || getDelay() != 0)
-            return CraftingResult.pass();
+    public void gatherRequirements(IRequirementList<HeatMachineComponent> list) {
+        if(this.mode == RequirementIOMode.INPUT)
+            list.processDelayed(0, this::processInput);
+        else
+            list.processDelayed(1, this::processOutput);
+    }
 
+    private CraftingResult processInput(HeatMachineComponent component, ICraftingContext context) {
         double amount = context.getModifiedValue(this.amount, this, null);
         IHeatCapacitor capacitor = component.getHeatCapacitors(null).get(0);
         if(capacitor.getHeat() < amount)
@@ -74,33 +79,14 @@ public class HeatRequirement extends AbstractDelayedChanceableRequirement<HeatMa
         return CraftingResult.success();
     }
 
-    @Override
-    public CraftingResult processEnd(HeatMachineComponent component, ICraftingContext context) {
-        if(getMode() != RequirementIOMode.OUTPUT || getDelay() != 0)
-            return CraftingResult.pass();
-
+    private CraftingResult processOutput(HeatMachineComponent component, ICraftingContext context) {
         double amount = context.getModifiedValue(this.amount, this, null);
-        component.getHeatCapacitors(null).get(0).handleHeat(amount);
+        component.getHeatCapacitors(null).getFirst().handleHeat(amount);
         return CraftingResult.success();
     }
 
     @Override
-    public CraftingResult execute(HeatMachineComponent component, ICraftingContext context) {
-        double amount = context.getModifiedValue(this.amount, this, null);
-        IHeatCapacitor capacitor = component.getHeatCapacitors(null).get(0);
-        if(getMode() == RequirementIOMode.INPUT) {
-            if(capacitor.getHeat() < amount)
-                return CraftingResult.error(Component.translatable("custommachinerymekanism.requirements.heat.error.input", amount, capacitor.getHeat()));
-            capacitor.handleHeat(-amount);
-            return CraftingResult.success();
-        } else {
-            capacitor.handleHeat(amount);
-            return CraftingResult.success();
-        }
-    }
-
-    @Override
-    public List<IJEIIngredientWrapper<Heat>> getJEIIngredientWrappers(IMachineRecipe recipe) {
-        return Collections.singletonList(new HeatIngredientWrapper(this.getMode(), this.amount, this.getChance(), false));
+    public List<IJEIIngredientWrapper<Heat>> getJEIIngredientWrappers(IMachineRecipe recipe, RecipeRequirement<?, ?> requirement) {
+        return Collections.singletonList(new HeatIngredientWrapper(this.getMode(), this.amount, requirement.chance(), false));
     }
 }
